--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "async": "^2.1.2",
     "chalk": "^1.1.3",
+    "koa": "^1.2.4",
+    "koa-bodyparser": "^2.2.0",
+    "koa-generic-session": "^1.11.3",
+    "koa-json": "^1.1.3",
+    "koa-pug": "^3.0.0-1",
+    "koa-router": "^5.4.0",
     "ntypescript": "^1.201609302242.1",
     "rethinkdb": "^2.3.3",
     "typings": "^2.0.0"
