--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.2.0",
     "koa-generic-session": "^1.11.3",
+    "koa-helmet": "^2.0.0",
     "koa-json": "^1.1.3",
     "koa-pug": "^3.0.0-1",
     "koa-router": "^5.4.0",
