Mise à jour des routes

--- a/data/nginx.conf
+++ b/data/nginx.conf
@@ -5,6 +5,8 @@ events {
 http {
     default_type  application/octet-stream;
     include  mime.types;
+    sendfile  on;
+    keepalive_timeout  30;
 
     upstream balancer {
         least_conn;
