--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-json": "^1.1.3",
     "koa-pug": "^3.0.0-1",
     "koa-router": "^5.4.0",
+    "koa-socket": "^4.4.0",
     "ntypescript": "^1.201609302242.1",
     "rethinkdb": "^2.3.3",
     "typings": "^2.0.0"
