--- a/package.json
+++ b/package.json
@@ -4,28 +4,25 @@
   "description": "Morpion multiplayer game",
   "scripts": {
     "start": "node app/index --harmony",
-    "build": "typings install && ntsc",
     "database": "node scripts/database --harmony",
     "password": "node scripts/password --harmony"
   },
   "dependencies": {
     "async": "^2.1.2",
     "chalk": "^1.1.3",
-    "cookie": "^0.3.1",
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.2.0",
     "koa-generic-session": "^1.11.3",
-    "koa-helmet": "^2.0.0",
     "koa-json": "^1.1.3",
     "koa-pug": "^3.0.0-1",
     "koa-redis": "^2.1.2",
     "koa-router": "^5.4.0",
-    "koa-socket-session": "^1.1.0",
-    "koa-socket.io": "^1.0.1",
-    "ntypescript": "^1.201609302242.1",
     "rethinkdb": "^2.3.3",
     "socket.io": "^1.5.1",
-    "socket.io-redis": "^1.1.1",
+    "typings": "^2.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^2.0.10",
     "typings": "^2.0.0"
   }
 }
