--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": false,
+        "removeComments": true,
+        "preserveConstEnums": true,
         "sourceMap": false
     },
     "exclude": [
