--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.2",
   "description": "Morpion multiplayer game",
   "scripts": {
-    "start": "node app/index --harmony",
+    "start": "tsc && node app/index --harmony",
     "database": "node scripts/database --harmony",
     "password": "node scripts/password --harmony"
   },
   "dependencies": {
     "async": "^2.1.2",
-    "chalk": "^1.1.3",
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.2.0",
     "koa-generic-session": "^1.11.3",
@@ -18,11 +17,19 @@
     "koa-redis": "^2.1.2",
     "koa-router": "^5.4.0",
     "rethinkdb": "^2.3.3",
-    "socket.io": "^1.5.1",
-    "typings": "^2.0.0"
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
-    "typescript": "^2.0.10",
-    "typings": "^2.0.0"
+    "@types/async": "^2.0.34",
+    "@types/chalk": "^0.4.31",
+    "@types/koa": "0.0.0",
+    "@types/koa-bodyparser": "^3.0.20",
+    "@types/koa-json": "^2.0.15",
+    "@types/koa-router": "^7.0.21",
+    "@types/node": "0.0.2",
+    "@types/rethinkdb": "^2.3.0",
+    "@types/socket.io": "^1.4.27",
+    "chalk": "^1.1.3",
+    "typescript": "^2.0.10"
   }
 }
